Fix z-index of overlay of share popup

--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -226,6 +226,8 @@
 
   .side-bar__sticky {
     height: 200px;
+
+    z-index: 100;
   }
 
   &__block-wrapper {
